Final update on friends

--- a/school.html
+++ b/school.html
@@ -113,6 +113,111 @@
                     </div>
                 </div>
             </div>
+            <div class="card">
+                <div class="content">
+                    <div class="imgBx">
+                        <img src="./img/jireh-modified.jpg" alt="">
+                    </div>
+                    <div class="contentBx">
+                        <h4>Jireh Belen</h4>
+                        <h5>The Siga ng Parañaque</h5>
+                    </div>
+                    <div class="sci">
+                        <a href="https://www.facebook.com/jiereh12"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
+                        <a href="https://www.instagram.com/jiiiireeeh/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="content">
+                    <div class="imgBx">
+                        <img src="./img/peter-modified.jpg" alt="">
+                    </div>
+                    <div class="contentBx">
+                        <h4>Peter Rayos</h4>
+                        <h5>The CC</h5>
+                    </div>
+                    <div class="sci">
+                        <a href="https://www.facebook.com/PeterSthanlie"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
+                        <a href="https://www.instagram.com/petersthanlie/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="content">
+                    <div class="imgBx">
+                        <img src="./img/raven-modified.jpg" alt="">
+                    </div>
+                    <div class="contentBx">
+                        <h4>Raven Dela Rama</h4>
+                        <h5>The Coderist</h5>
+                    </div>
+                    <div class="sci">
+                        <a href="https://www.facebook.com/raven.delarama.5"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
+                        <a href="https://www.instagram.com/rrraaveennn/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="content">
+                    <div class="imgBx">
+                        <img src="./img/allen-modified.jpg" alt="">
+                    </div>
+                    <div class="contentBx">
+                        <h4>Allen Magadia</h4>
+                        <h5>The Guitarist</h5>
+                    </div>
+                    <div class="sci">
+                        <a href="https://www.facebook.com/allenmagadia11"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
+                        <a href="https://www.instagram.com/_soramagadia/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="content">
+                    <div class="imgBx">
+                        <img src="./img/kurtd-modified.jpg" alt="">
+                    </div>
+                    <div class="contentBx">
+                        <h4>Kurtd Bigtas</h4>
+                        <h5>The Overall</h5>
+                    </div>
+                    <div class="sci">
+                        <a href="https://www.facebook.com/Kertsuuu"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
+                        <a href="https://www.instagram.com/_kertsu/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="content">
+                    <div class="imgBx">
+                        <img src="./img/ryk-modified.jpg" alt="">
+                    </div>
+                    <div class="contentBx">
+                        <h4>John Ryk Nava</h4>
+                        <h5>The Comedian</h5>
+                    </div>
+                    <div class="sci">
+                        <a href="https://www.facebook.com/johnryk.nava.27"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
+                        <a href="https://www.instagram.com/johnryk_nava/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="content">
+                    <div class="imgBx">
+                        <img src="./img/romel-modified.jpg" alt="">
+                    </div>
+                    <div class="contentBx">
+                        <h4>Romel Razon</h4>
+                        <h5>The Grandmother</h5>
+                    </div>
+                    <div class="sci">
+                        <a href="https://www.facebook.com/romel.razon.50"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
+                        <a href="https://www.instagram.com/omengto90/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                    </div>
+                </div>
+            </div>
     
         </div>
     </section>
